--- a/codeSHOW.Win8JS/pages/codeViewer/codeViewer.css
+++ b/codeSHOW.Win8JS/pages/codeViewer/codeViewer.css
@@ -7,12 +7,3 @@
 .codeContainer {
     cursor: text;
 }
-
-.swiper {
-    margin-right: 120px;
-    margin-left: 0px !important;
-}
-
-    .swiper > div {
-        margin-left: 120px !important;
-    }
